--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
   src: url("C:/Users/azacc/Desktop/AP MERN SABADO/public/assets/fonts/BebasNeue.otf");
 }
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   margin: 0;
   padding: 0;
