--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,12 @@
   src: url("C:/Users/azacc/Desktop/AP MERN SABADO/public/assets/fonts/BebasNeue.otf");
 }
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
-
